EU judgment and opinion links; resolve #20
Squashed commit of the following:

commit f9c6231501df2eeac529e14a88ee5ce530576548
Author: Huey <hello@huey.xyz>
Date:   Tue Jun 8 21:28:47 2021 +0800

    disable unimplemented jurisdictions

commit dd85f6be80d9bebe6aae76b2673fff86ca36e9eb
Author: Huey <hello@huey.xyz>
Date:   Tue Jun 8 21:20:49 2021 +0800

    🐛 bug: fix LRS bug

commit 5faaf30d26180e4485fe03cd59b84d43f8261416
Author: Huey <hello@huey.xyz>
Date:   Tue Jun 8 21:01:57 2021 +0800

    EU judgment and opinion links; resolve #20

commit ab348f7027ce2818a02db3624a1744a418a193a0
Author: Huey <hello@huey.xyz>
Date:   Tue Jun 8 19:47:07 2021 +0800

    📦 dep: update

--- a/src/Popup/Popup.scss
+++ b/src/Popup/Popup.scss
@@ -68,4 +68,8 @@ section#popup {
       color: darkslategray;
     }
   }
+
+  a.no-link {
+    @include no-link;
+  }
 }
